--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -2,6 +2,12 @@ set(ABSL_USE_SYSTEM_INCLUDES ON)
 set(ABSL_ENABLE_INSTALL OFF)
 add_subdirectory(abseil-cpp)
 
+set(CAPSTONE_BUILD_MACOS_THIN ON)
+set(CAPSTONE_BUILD_CSTOOL ON)
+set(CAPSTONE_AARCH64_SUPPORT ON)
+set(CAPSTONE_ARCHITECTURE_DEFAULT OFF)
+add_subdirectory(capstone)
+
 add_subdirectory(choma-cmake)
 
 set(FMT_DOC OFF)
