--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(dsc-miner C CXX)
 
 set(FAST_CISH_FLAGS -O3)
 set(FAST_CFLAGS ${FAST_CISH_FLAGS} ${COLOR_DIAGS} -fvectorize -flto=full -fvisibility=hidden -fvisibility-inlines-hidden -fvisibility-inlines-hidden-static-local-var -fdata-sections -ffunction-sections -march=native)
-set(FAST_CXXFLAGS ${FAST_CFLAGS} -stdlib=libc++ -fno-rtti)
+set(FAST_CXXFLAGS ${FAST_CFLAGS})
 set(FAST_LDFLAGS ${FAST_CXXFLAGS})
 
 add_compile_options(${FAST_CXXFLAGS})
