add cmake-ed binja arm64 disassembler

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -2,6 +2,8 @@ set(ABSL_USE_SYSTEM_INCLUDES ON)
 set(ABSL_ENABLE_INSTALL OFF)
 add_subdirectory(abseil-cpp)
 
+add_subdirectory(binja-arm64dis)
+
 set(CAPSTONE_BUILD_MACOS_THIN ON)
 set(CAPSTONE_BUILD_CSTOOL ON)
 set(CAPSTONE_AARCH64_SUPPORT ON)
